# CareAI

./: .gitignore  README.md
Hackathon/hostipal_ms/: README.md  pyproject.toml
Hackathon/hostipal_ms/src/hostipal_ms/: admission.py  billing.py  crew.py  reception.py  report.md  st_app.py
Hackathon/hostipal_ms/src/hostipal_ms/config/: agents.yaml  tasks.yaml
