[project]
name = "hostipal_ms"
version = "0.1.0"
description = "hostipal_ms using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
"crewai[tools]>=0.80.0,<1.0.0",
"onnxruntime==1.15.0",
"socksio>=1.0.0",
"pyarrow==17.0.0",
]

[project.scripts]
hostipal_ms = "hostipal_ms.main:run"
run_crew = "hostipal_ms.main:run"
train = "hostipal_ms.main:train"
replay = "hostipal_ms.main:replay"
test = "hostipal_ms.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
